Closed Bug 481960 Opened 15 years ago Closed 15 years ago

mIsEditor in nsFrameSelection is not used anywhere

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: arno, Assigned: arno)

Details

Attachments

(1 file)

Hi,
mIsEditor member of nsFrameSelection seems to be used nowhere[1]. It probably could be removed.

http://mxr.mozilla.org/mozilla-central/search?string=mIsEditor
Attachment #366031 - Flags: review?(bent.mozilla)
Comment on attachment 366031 [details] [diff] [review]
patch v1: delete mIsEditor, unused member of nsFrameSelection

Sorry, I'm not a layout peer, even though this is simple!
Attachment #366031 - Flags: review?(bent.mozilla) → review?(dbaron)
Attachment #366031 - Flags: superreview?(roc)
Assignee: nobody → arno
Comment on attachment 366031 [details] [diff] [review]
patch v1: delete mIsEditor, unused member of nsFrameSelection

dbaron could have just sr'ed this. If bent had sr'ed it or even reviewed the whole thing, I wouldn't have complained :-)
Attachment #366031 - Flags: superreview?(roc) → superreview+
Pushed: http://hg.mozilla.org/mozilla-central/rev/b567018a23c1
Keywords: checkin-needed
Whiteboard: [needs landing] → [baking for 1.9.1]
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Don't need this on 1.9.1.
Whiteboard: [baking for 1.9.1]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: