Arno Renevier - Bug 481960 - mIsEditor in nsFrameSelection is not used anywhere